--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,13 @@ See the [`vignette("centofanti2020", package = "funcharts")`](https://unina-sfer
 
 ## Installation
 
+You can install the CRAN version of the R package `funcharts` by doing:
+
+```{r, eval = FALSE}
+install.packages("funcharts")
+```
+
+
 You can install the development version from GitHub with:
 
 ```{r, eval = FALSE}
