--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/funcharts)](https://CRAN.R-project.org/package=funcharts)
 [![R-CMD-check](https://github.com/unina-sfere/funcharts/workflows/R-CMD-check/badge.svg)](https://github.com/unina-sfere/funcharts/actions)
+[![Codecov test coverage](https://codecov.io/gh/unina-sfere/funcharts/branch/main/graph/badge.svg)](https://app.codecov.io/gh/unina-sfere/funcharts?branch=main)
 <!-- badges: end -->
 
 # funcharts
