--- a/vignettes/colosimo2010.Rmd
+++ b/vignettes/colosimo2010.Rmd
@@ -13,6 +13,7 @@ text-align: justify}
 </style>
 
 
+
 # Functional control charts for multivariate quality characteristics
 
 In this vignette we show how to use the `funcharts` package to apply the methods proposed in Colosimo and Pacella et al. (2010) to build control charts for monitoring a multivariate functional quality characteristic.
@@ -27,17 +28,11 @@ data("air")
 mfdobj <- get_mfd_list(air, grid = 1:24)
 nobs <- dim(mfdobj$coefs)[2]
 nobs
-```
-
-```
-## [1] 355
-```
-
-```r
+#> [1] 355
 plot_mfd(mfdobj)
 ```
 
-![plot of chunk unnamed-chunk-1](figure/unnamed-chunk-1-1.png)
+<img src="colosimo2010-unnamed-chunk-2-1.png" alt="plot of chunk unnamed-chunk-2" style="display:block; margin: auto" style="display: block; margin: auto;" />
 
 In order to perform the statistical process monitoring analysis, we divide the data set into a phase I and a phase II dataset.
 
@@ -64,7 +59,7 @@ pca <- pca_mfd(mfdobj1)
 plot_pca_mfd(pca, harm = 1:3)
 ```
 
-![plot of chunk unnamed-chunk-3](figure/unnamed-chunk-3-1.png)
+<img src="colosimo2010-unnamed-chunk-4-1.png" alt="plot of chunk unnamed-chunk-4" style="display:block; margin: auto" style="display: block; margin: auto;" />
 
 
 ## Control charts
@@ -81,7 +76,7 @@ cclist_pca <- control_charts_pca(pca = pca, newdata = mfdobj2)
 plot_control_charts(cclist_pca)
 ```
 
-![plot of chunk plot_control_charts_pca](figure/plot_control_charts_pca-1.png)
+<img src="colosimo2010-plot_control_charts_pca-1.png" alt="plot of chunk plot_control_charts_pca" style="display:block; margin: auto" style="display: block; margin: auto;" />
 
 
 ## Fault detection
@@ -96,33 +91,30 @@ We can get the out of control observations using `which_ooc`.
 ```r
 ooc_index <- which_ooc(cclist_pca)
 ooc_index
-```
-
-```
-## $T2
-##    n  id
-## 1  2 302
-## 2  5 305
-## 3  9 309
-## 4 12 312
-## 5 23 323
-## 6 32 332
-## 
-## $spe
-##    n  id
-## 1  9 309
-## 2 25 325
-## 3 28 328
-## 4 34 334
-## 5 48 348
-## 6 52 352
-## 7 54 354
-## 8 55 355
+#> $T2
+#>    n  id
+#> 1  2 302
+#> 2  5 305
+#> 3  9 309
+#> 4 12 312
+#> 5 23 323
+#> 6 32 332
+#> 
+#> $spe
+#>    n  id
+#> 1  9 309
+#> 2 25 325
+#> 3 28 328
+#> 4 34 334
+#> 5 48 348
+#> 6 52 352
+#> 7 54 354
+#> 8 55 355
 ```
 
 
 From the control charts it is possible to see some phase II observations out of control.
-For example, let us consider observation 9. 
+For example, let us consider observation 9.
 We can exploit the contribution plots using the function `cont_plot` to identify the variables responsible of the anomaly.
 The contributions are plotted as bar plots, against upper control limits estimated empirically on the training data.
 
@@ -131,7 +123,7 @@ The contributions are plotted as bar plots, against upper control limits estimat
 cont_plot(cclist_pca, 9)
 ```
 
-![plot of chunk cont_plot](figure/cont_plot-1.png)
+<img src="colosimo2010-cont_plot-1.png" alt="plot of chunk cont_plot" style="display:block; margin: auto" style="display: block; margin: auto;" />
 Finally, we can also plot any multivariate functional observation against a reference data set by using the function `plot_mon`:
 
 
@@ -139,8 +131,8 @@ Finally, we can also plot any multivariate functional observation against a refe
 plot_mon(cclist_pca, fd_train = mfdobj1, fd_test = mfdobj2[9])
 ```
 
-![plot of chunk plot_mon](figure/plot_mon-1.png)
-This helps to understand which profiles were anomalous. 
+<img src="colosimo2010-plot_mon-1.png" alt="plot of chunk plot_mon" style="display:block; margin: auto" style="display: block; margin: auto;" />
+This helps to understand which profiles were anomalous.
 Variables exceeding contribution plot limits are coloured in red.
 
 # References
